# tank

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODING_STANDARDS.md  DESIGN_AGENT_ORCHESTRATION.md  DESIGN_AUTONOMOUS_MODE.md  DESIGN_FILE_ACCESS_SECURITY.md  DESIGN_POLICY_REDESIGN.md  DEVELOPMENT.md  GEMINI.md  IMPLEMENTATION_PLAN.md  PATH_MIGRATION_COMPLETE.md  README.md  ROADMAP_FRONTEND_CLIENTS.md  ROADMAP_PIPELINE_ARCHITECTURE.md  TESTING.md  docker-compose.yml  main.py  pyproject.toml
backend/: .gitignore  .gitignore.plugin  ARCHITECTURE.md  CLAUDE.md  CODING_STANDARDS.md  DEVELOPMENT.md  ORCHESTRATION.md  PATH_UPDATE_SUMMARY.md  README.md  STRUCTURE.md  TESTING.md  TOOLS.md  pyproject.toml
backend/agents/: coder.md  computer_use.md  researcher.md  tasker.md  verifier.md
backend/contracts/: README.md  pyproject.toml
backend/contracts/tank_contracts/: __init__.py  asr.py  connector.py  speaker.py  tts.py
backend/core/: README.md  config.yaml  mcp_servers.yaml.example  pyproject.toml
backend/core/tests/: brain_test_helpers.py  test_agent_base.py  test_agent_factory.py  test_agent_graph.py  test_agent_tool_supervisor.py  test_alerting.py  test_api_agents.py  test_api_memory.py  test_api_server.py  test_api_usage.py  test_approval.py  test_approval_broker.py  test_approval_gate.py  test_approval_integration.py  test_asr_speaker_merger.py  test_assistant.py  test_assistant_modality.py  test_assistant_v2.py  test_audit.py  test_background_agent_flow.py  test_backup_manager.py  test_bootstrap_migration.py  test_brain.py  test_brain_agent_integration.py  test_brain_interrupt.py  test_brain_markdown_images.py  test_brain_memory.py  test_brain_partial_persist_on_error.py  test_brain_persistence.py  test_brain_processing_signals.py  test_brain_processor_drain.py  test_brain_streaming.py  test_brain_summarization.py  test_brain_title_request.py  test_brain_token_counting.py  test_brain_tts_integration.py  test_brain_typed_config.py  test_brain_worker_inbox.py  test_capabilities.py  test_channel_api.py  (+180 more)
backend/docs/: DESIGN_BACKGROUND_COMPUTER_USE.md
backend/examples/: speaker_identification_demo.py  speaker_identification_integration.py
backend/plugins/: README.md  plugins.yaml
backend/plugins/asr-assemblyai/: config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/asr-deepgram/: config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/asr-elevenlabs/: config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/asr-faster-whisper/: config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/asr-funasr/: config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/asr-sherpa/: config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/connector-discord/: README.md  config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/connector-feishu/: README.md  config.example.yaml  plugin.yaml  pyproject.toml  pytest.ini
backend/plugins/connector-slack/: README.md  config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/connector-telegram/: README.md  config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/connector-wechat/: README.md  config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/speaker-sherpa/: config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/tts-cartesia/: config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/tts-chatterbox/: config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/tts-cosyvoice/: config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/tts-edge/: README.md  config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/tts-elevenlabs/: config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/tts-hume/: config.example.yaml  plugin.yaml  pyproject.toml
backend/plugins/tts-kokoro/: config.example.yaml  plugin.yaml  pyproject.toml
backend/sandbox/: Dockerfile
backend/scripts/: analyze_browser_captures.py  capture_tts.py  download_models.py  manage_speakers.py  record_audio.py  sync_litellm_models.py
backend/skills/agent-browser/: .review
backend/skills/hello-world/: .review  SKILL.md
backend/skills/self-improving-agent/: .review
backend/skills/skill-vetter/: .review
backend/src/tank_backend/: main.py
backend/tests/: test_api_server.py  test_asr.py  test_assistant.py  test_brain.py  test_brain_processing_signals.py  test_brain_streaming.py  test_embedding_sherpa.py  test_mic.py  test_perception.py  test_perception_streaming.py  test_processing_signals_integration.py  test_repository_sqlite.py  test_segmenter.py  test_step_id.py  test_tts_engine_edge.py  test_vad.py  test_virtual_assistant.py  test_voiceprint.py  test_voiceprint_recognizer.py  test_voiceprint_streaming.py
cli/: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODING_STANDARDS.md  DEVELOPMENT.md  README.md  TESTING.md  pyproject.toml
cli/src/tank_cli/: __init__.py  main.py
cli/tests/: conftest.py  test_cli_audio_capture.py  test_cli_audio_playback.py  test_cli_client.py
device/main/: CMakeLists.txt  config.h  idf_component.yml  main.cpp
device/main/app/: Assistant.cpp  Assistant.h  Session.cpp  Session.h
device/main/audio/: AecDiag.cpp  AecDiag.h  AfeProcessor.cpp  AfeProcessor.h  AudioCapture.cpp  AudioCapture.h  AudioPlayback.cpp  AudioPlayback.h  FrameChunker.cpp  FrameChunker.h  SilenceDetector.cpp  SilenceDetector.h  WakeWordDetector.cpp  WakeWordDetector.h
device/main/hal/: BoardHAL.h
device/main/net/: WiFiManager.cpp  WiFiManager.h  WsClient.cpp  WsClient.h  WsProtocol.cpp  WsProtocol.h
device/main/settings/: NvsSettings.cpp  NvsSettings.h  SerialConfig.cpp  SerialConfig.h
device/main/ui/: Cores3Display.cpp  Cores3Display.h  Display.cpp  Display.h  PyramidDisplay.cpp  PyramidDisplay.h
macos/src-tauri/: Cargo.toml  tauri.conf.json
macos/src-tauri/capabilities/: default.json
macos/src-tauri/icons/: icon.icns
macos/src-tauri/src/: audio.rs  lib.rs  main.rs  ws_bridge.rs
plugins/tts-edge/: README.md  pyproject.toml
plugins/tts-edge/tests/: conftest.py  test_engine.py
(+772 files in other folders)
