[project]
name = "tank"
version = "0.1.0"
description = "Voice assistant with speech recognition, TTS, and LLM capabilities supporting Chinese and English"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20241220",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "edge-tts>=6.1.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.5",
    "textual>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "textual-dev>=1.8.0",
]
