[project]
name = "tank"
version = "0.1.0"
description = "Voice assistant with speech recognition, TTS, and LLM capabilities supporting Chinese and English"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "edge-tts>=6.1.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.5",
    "textual>=7.4.0",
    "sounddevice>=0.5.5",
    "pydub>=0.25.0",
    "audioop-lts>=0.2.0; python_version >= '3.13'",
    "silero-vad>=4.0.0",
    "onnxruntime>=1.16.1",
    "faster-whisper>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "textual-dev>=1.8.0",
]
