[project]
name = "tank-cli"
version = "0.1.0"
description = "Tank Voice Assistant - CLI/TUI Client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "textual>=7.4.0",
    "sounddevice>=0.5.5",
    "pydub>=0.25.0",
    "audioop-lts>=0.2.0; python_version >= '3.13'",
    "silero-vad>=4.0.0",
    "onnxruntime>=1.16.1",
    "websockets>=12.0",
]

[project.scripts]
tank = "tank_cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "textual-dev>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
