[project]
name = "tank-backend"
version = "0.1.0"
description = "Tank Voice Assistant - Backend API Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.13.5",
    "sounddevice>=0.5.5",
    "silero-vad>=4.0.0",
    "onnxruntime>=1.16.1",
    "faster-whisper>=1.0.0",
    "sherpa-onnx>=1.12.23",
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "websockets>=12.0",
    "python-multipart>=0.0.22",
    "sherpa-onnx-core>=1.12.25",
    "tank-contracts",
    "docker>=7.0.0",
    "tiktoken>=0.7.0",
    "langfuse>=2.0.0",
    "crawl4ai>=0.5.0",
    "mem0ai>=0.1.0",
    "chromadb>=0.4.0",
    "mcp>=1.27.0",
    "croniter>=1.3.0",
    "apscheduler>=4.0.0a5",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pypdf>=6.10.2",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    # voice_bridge.py imports AudioSegment at module top level; every
    # connector pulls voice_bridge in so this is a hard runtime dep
    # for the core, not just for voice-enabled deployments. We were
    # silently relying on tts-edge transitively installing it before
    # Phase 13 — making it explicit prevents a regression in any
    # deployment that doesn't ship tts-edge.
    "pydub>=0.25.1",
    # Phase 18: ChartTool renders matplotlib figures via the headless
    # Agg backend (no GUI deps). matplotlib is import-heavy (~1s cold
    # import); we defer the import to the first chart call so server
    # boots stay fast. Pinned to a recent enough version that
    # ``matplotlib.use("Agg")`` works without a fallback warning.
    "matplotlib>=3.8.0",
]

[project.scripts]
tank-backend = "tank_backend.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.11.0",
    "watchfiles>=1.1.1",
    "pyright>=1.1.400",
    # Schema-validation tests run every tool's OpenAI function spec
    # through real JSON-Schema validation. ``jsonschema`` is already
    # in the venv via chromadb/mcp/litellm, but pinning it as a
    # direct dev dep prevents the same hidden-transitive trap that
    # bit pydub before Phase 18.
    "jsonschema>=4.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["tank_backend"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportAttributeAccessIssue = "error"

[tool.uv.sources]
tank-contracts = { workspace = true }
