[project]
name = "tts-edge"
version = "0.1.0"
description = "Edge TTS plugin for Tank Voice Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "audioop-lts>=0.2.0; python_version >= '3.13'",
    "tank-contracts",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
