[project]
name = "asr-elevenlabs"
version = "0.1.0"
description = "ElevenLabs realtime streaming ASR plugin for Tank Voice Assistant"
requires-python = ">=3.10"
dependencies = [
    "websockets>=13.0",
    "numpy>=1.24.0",
    "tank-contracts",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.tank]
plugin_name = "asr-elevenlabs"
display_name = "ElevenLabs ASR"
description = "ElevenLabs realtime streaming ASR plugin"

[[tool.tank.extensions]]
name = "asr"
type = "asr"
factory = "asr_elevenlabs:create_engine"

[tool.uv.sources]
tank-contracts = { workspace = true }
