[project]
name = "asr-funasr"
version = "0.1.0"
description = "FunASR streaming ASR plugin for Tank Voice Assistant"
requires-python = ">=3.10"
dependencies = [
    "websockets>=13.0",
    "numpy>=1.24.0",
    "tank-contracts",
    "dashscope>=1.25.15",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tank-contracts = { workspace = true }
