[project]
name = "asr-sherpa"
version = "0.1.0"
description = "Sherpa-ONNX streaming ASR plugin for Tank Voice Assistant"
requires-python = ">=3.10"
dependencies = [
    "sherpa-onnx>=1.10.0",
    "numpy>=1.24.0",
    "tank-contracts",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.tank]
plugin_name = "asr-sherpa"
display_name = "Sherpa-ONNX ASR"
description = "Sherpa-ONNX streaming ASR plugin"

[[tool.tank.extensions]]
name = "asr"
type = "asr"
factory = "asr_sherpa:create_engine"

[tool.uv.sources]
tank-contracts = { workspace = true }
