[project]
name = "connector-discord"
version = "0.1.0"
description = "Discord connector plugin for Tank Voice Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.3.0",
    "tank-contracts",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tank-contracts = { workspace = true }
