[project]
name = "connector-feishu"
version = "0.1.0"
description = "Feishu (Lark) connector plugin for Tank Voice Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # ``lark-oapi`` is Feishu's official Python SDK. We use the
    # WebSocket long-connection path (``lark.ws.Client``) — no public
    # webhook URL required, matches Slack's Socket Mode shape.
    "lark-oapi>=1.5.0",
    "tank-contracts",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tank-contracts = { workspace = true }
