[project]
name = "connector-slack"
version = "0.1.0"
description = "Slack connector plugin for Tank Voice Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "slack_bolt>=1.18.0",
    "aiohttp>=3.9.0",
    "tank-contracts",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tank-contracts = { workspace = true }
