[project]
name = "connector-telegram"
version = "0.1.0"
description = "Telegram connector plugin for Tank Voice Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.4.0",
    "tank-contracts",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tank-contracts = { workspace = true }
