[project]
name = "speaker-sherpa"
version = "0.1.0"
description = "Sherpa-ONNX speaker embedding plugin for Tank Voice Assistant"
requires-python = ">=3.10"
dependencies = [
    "sherpa-onnx>=1.10.0",
    "numpy>=1.24.0",
    "tank-contracts",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tank-contracts = { workspace = true }
