[project]
name = "tts-cosyvoice"
version = "0.1.0"
description = "CosyVoice TTS plugin for Tank Voice Assistant"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "tank-contracts",
    "websockets>=12.0",
]

[project.scripts]
cosyvoice-say = "tts_cosyvoice.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.34.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.115.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.tank]
plugin_name = "tts-cosyvoice"
display_name = "CosyVoice TTS"
description = "CosyVoice TTS plugin with SFT and zero-shot modes"

[[tool.tank.extensions]]
name = "tts"
type = "tts"
factory = "tts_cosyvoice:create_engine"

[tool.uv.sources]
tank-contracts = { workspace = true }
